--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *.class
+*.swp
+.classpath
+.project
+.settings
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+target
 
 # Package Files #
 *.jar
@@ -10,3 +13,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
