--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 
 *.class
 *.swp
+*.swh
+*.swi
+*.swj
+*.swl
+*.swm
+*.swn
+*.swo
+*.swk
 .classpath
 .project
 .settings
@@ -16,3 +24,11 @@ target
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+uiDesigner.xml
+kloudless-java.iml
