--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,61 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.kloudless</groupId>
 	<artifactId>kloudless-java</artifactId>
+  <version>1.0.0</version>
 	<packaging>jar</packaging>
   <name>kloudless-java</name>
   <url>https://github.com/kloudless/kloudless-java</url>
+  <description>Kloudless Java Client SDK</description>
+
+  <organization>
+    <name>Kloudless</name>
+    <url>https://kloudless.com</url>
+  </organization>
+ 
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Timothy Liu</name>
+      <email>timmy@kloudless.com</email>
+      <organization>Kloudless Inc.</organization>
+      <organizationUrl>https://www.kloudless.com</organizationUrl>
+    </developer>
+    <developer>
+      <name>Guo-Guang Chiou</name>
+      <email>gchiou@kloudless.com</email>
+      <organization>Kloudless Inc.</organization>
+      <organizationUrl>https://www.kloudless.com</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git@github.com:kloudless/kloudless-java.git</connection>
+    <developerConnection>scm:git:git@github.com:kloudless/kloudless-java.git</developerConnection>
+    <url>git@github.com:kloudless/kloudless-java.git</url>
+    <tag>HEAD</tag>
+  </scm>
+  
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+    </repository>
+  </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -25,23 +75,29 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <description>Kloudless Java Bindings</description>
-  <organization>
-    <name>Kloudless</name>
-    <url>https://kloudless.com</url>
-  </organization>
+ 
   <parent>
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
     <version>7</version>
   </parent>
-  <scm>
-    <connection>scm:git:git@github.com:kloudless/kloudless-java.git</connection>
-    <developerConnection>scm:git:git@github.com:kloudless/kloudless-java.git</developerConnection>
-    <url>git@github.com:kloudless/kloudless-java.git</url>
-  </scm>
+  
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -53,27 +109,18 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
-        <!-- When we deploy to Maven Central
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-        -->
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>${build.java.version}</source>
+          <target>${build.java.version}</target>
         </configuration>
       </plugin>
       <plugin>
@@ -140,5 +187,8 @@
       </plugin>
     </plugins>
   </build>
-  <version>1.0.0</version>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <build.java.version>1.8</build.java.version>
+  </properties>
 </project>
