Add assertation to test cases in KloudlessTest

--- a/src/test/resources/kloudless.configuration.properties
+++ b/src/test/resources/kloudless.configuration.properties
@@ -11,3 +11,6 @@ test_accounts           = 3198
 api_server_addr         = localhost 
 api_server_proto        = http
 api_server_port         = 8002 
+
+# test data
+one_test_account_json   = {"id": 3198, "account": "kloudless.test.gchiou@gmail.com", "active": true, "service": "gdrive", "created": "2017-06-02T08:07:53.238608Z", "modified": "2017-06-11T12:38:25.378242Z", "service_name": "Google Drive", "admin": false, "apis": [ "storage" ], "effective_scope": "gdrive:normal.storage.default"}
