Fix partialy Dev-542 of newer binary upload format
Add assertations to existing test cases including
test cases employing newer binary upload format

--- a/src/test/resources/kloudless.configuration.properties
+++ b/src/test/resources/kloudless.configuration.properties
@@ -14,3 +14,6 @@ api_server_port         = 8002
 
 # test data
 one_test_account_json   = {"id": 3198, "account": "kloudless.test.gchiou@gmail.com", "active": true, "service": "gdrive", "created": "2017-06-02T08:07:53.238608Z", "modified": "2017-06-11T12:38:25.378242Z", "service_name": "Google Drive", "admin": false, "apis": [ "storage" ], "effective_scope": "gdrive:normal.storage.default"}
+
+# test file (absolute path)
+path_uploading_file = /Users/gchiou/Downloads/IMAG0172.jpg
