Remove api_key in property file

--- a/src/test/resources/kloudless.configuration.properties
+++ b/src/test/resources/kloudless.configuration.properties
@@ -1,19 +1,15 @@
 # key = value
 
-# api_key here is just for testing purpose. api_key should be kept very secretly
-# on production systems
-api_key                 = _bATjNxNtjwoaNnojiWG35dTPiC6E7_K6WWOOwoEjPckbz6S
-
-# accounts separated by colon
-test_accounts           = 3198
+# multiple test accounts use colon to separate
+test_accounts           = your account 
 
 # server information
-api_server_addr         = localhost 
-api_server_proto        = http
-api_server_port         = 8002 
+api_server_addr         = api server address 
+api_server_proto        = http or https
+api_server_port         = port number 
 
 # test data
-one_test_account_json   = {"id": 3198, "account": "kloudless.test.gchiou@gmail.com", "active": true, "service": "gdrive", "created": "2017-06-02T08:07:53.238608Z", "modified": "2017-06-11T12:38:25.378242Z", "service_name": "Google Drive", "admin": false, "apis": [ "storage" ], "effective_scope": "gdrive:normal.storage.default"}
+one_test_account_json   = an account's json data
 
 # test file (absolute path)
-path_uploading_file = /Users/gchiou/Downloads/IMAG0172.jpg
+path_uploading_file = /path/to/a/file
